fix: prettier no projeto funcionando
