# src/modules/cars/entities/Category.ts
@@ -1,8 +1,7 @@
-import { v4 as uuidv4 } from "uuid";
-import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
+import { v4 as uuidv4 } from 'uuid';
 
-
-@Entity("categories")
+@Entity('categories')
 class Category {
   @PrimaryColumn()
   id?: string;
@@ -23,4 +22,4 @@ class Category {
   }
 }
 
-export { Category }
+export { Category };
